--- a/notebooks/baseline model.ipynb
+++ b/notebooks/baseline model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +83,7 @@
        " 'structures.zip',\n",
        " 'train.csv',\n",
        " 'magnetic_shielding_tensors.csv',\n",
+       " 'generated_features',\n",
        " 'dipole_moments.csv',\n",
        " 'sample_submission.csv',\n",
        " 'potential_energy.csv']"
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
