fix import paths

--- a/notebooks/baseline model.ipynb
+++ b/notebooks/baseline model.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotting'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0cc0f77e8273>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mplotting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_diagram\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_landscapes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mplotting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_betti_surfaces\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_betti_curves\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mplotting\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot_point_cloud\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotting'"
+     ]
+    }
+   ],
    "source": [
     "# Data handling\n",
     "import pandas as pd\n",
@@ -28,19 +40,21 @@
     "import giotto.diagrams as diag\n",
     "import giotto.homology as hl\n",
     "\n",
+    "# Others\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append('/data/')\n",
+    "sys.path.append('/notebooks/')\n",
+    "from itertools import product\n",
+    "import time\n",
+    "\n",
     "# Plotting functions\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from plotting import plot_diagram, plot_landscapes\n",
     "from plotting import plot_betti_surfaces, plot_betti_curves\n",
     "from plotting import plot_point_cloud\n",
-    "from xgboost import plot_importance\n",
-    "\n",
-    "\n",
-    "# Others\n",
-    "import os\n",
-    "from itertools import product\n",
-    "import time"
+    "from xgboost import plot_importance"
    ]
   },
   {
@@ -63,6 +77,24 @@
     "    \"\"\"\n",
     "    maes = (y_true-y_pred).abs().groupby(types).mean()\n",
     "    return np.log(maes.map(lambda x: max(x, floor))).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'/Users/colinkalin/molecule_bond_prediction'"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
    ]
   },
   {
