--- a/notebooks/molecule_predict_short.ipynb
+++ b/notebooks/molecule_predict_short.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,10 +532,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_rel_holes_0</th>\n",
+       "      <th>num_rel_holes_1</th>\n",
+       "      <th>num_rel_holes_2</th>\n",
+       "      <th>num_holes_0</th>\n",
+       "      <th>num_holes_1</th>\n",
+       "      <th>num_holes_2</th>\n",
+       "      <th>avg_lifetime_0</th>\n",
+       "      <th>avg_lifetime_1</th>\n",
+       "      <th>avg_lifetime_2</th>\n",
+       "      <th>amplitude</th>\n",
+       "      <th>...</th>\n",
+       "      <th>avg_lifetime_1_graph</th>\n",
+       "      <th>avg_lifetime_2_graph</th>\n",
+       "      <th>amplitude_graph</th>\n",
+       "      <th>area_feature_0</th>\n",
+       "      <th>area_feature_1</th>\n",
+       "      <th>area_feature_2</th>\n",
+       "      <th>area_feature_0_graph</th>\n",
+       "      <th>area_feature_1_graph</th>\n",
+       "      <th>area_feature_2_graph</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.240537</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.240537</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.240537</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.240537</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.240537</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.654198</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.411488</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12604</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.222231</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12605</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.222231</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12606</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.222231</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12607</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.222231</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12608</th>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.222231</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.632218</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>2208.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12609 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       num_rel_holes_0  num_rel_holes_1  num_rel_holes_2  num_holes_0  \\\n",
+       "0                   24                1                0           24   \n",
+       "1                   24                1                0           24   \n",
+       "2                   24                1                0           24   \n",
+       "3                   24                1                0           24   \n",
+       "4                   24                1                0           24   \n",
+       "...                ...              ...              ...          ...   \n",
+       "12604               28                0                0           28   \n",
+       "12605               28                0                0           28   \n",
+       "12606               28                0                0           28   \n",
+       "12607               28                0                0           28   \n",
+       "12608               28                0                0           28   \n",
+       "\n",
+       "       num_holes_1  num_holes_2  avg_lifetime_0  avg_lifetime_1  \\\n",
+       "0                2            0        1.240537        0.654198   \n",
+       "1                2            0        1.240537        0.654198   \n",
+       "2                2            0        1.240537        0.654198   \n",
+       "3                2            0        1.240537        0.654198   \n",
+       "4                2            0        1.240537        0.654198   \n",
+       "...            ...          ...             ...             ...   \n",
+       "12604            0            0        1.222231        0.000000   \n",
+       "12605            0            0        1.222231        0.000000   \n",
+       "12606            0            0        1.222231        0.000000   \n",
+       "12607            0            0        1.222231        0.000000   \n",
+       "12608            0            0        1.222231        0.000000   \n",
+       "\n",
+       "       avg_lifetime_2  amplitude  ...  avg_lifetime_1_graph  \\\n",
+       "0                 0.0   4.411488  ...              0.654198   \n",
+       "1                 0.0   4.411488  ...              0.654198   \n",
+       "2                 0.0   4.411488  ...              0.654198   \n",
+       "3                 0.0   4.411488  ...              0.654198   \n",
+       "4                 0.0   4.411488  ...              0.654198   \n",
+       "...               ...        ...  ...                   ...   \n",
+       "12604             0.0   4.632218  ...              0.000000   \n",
+       "12605             0.0   4.632218  ...              0.000000   \n",
+       "12606             0.0   4.632218  ...              0.000000   \n",
+       "12607             0.0   4.632218  ...              0.000000   \n",
+       "12608             0.0   4.632218  ...              0.000000   \n",
+       "\n",
+       "       avg_lifetime_2_graph  amplitude_graph  area_feature_0  area_feature_1  \\\n",
+       "0                       0.0         4.411488          1907.0          1907.0   \n",
+       "1                       0.0         4.411488          1907.0          1907.0   \n",
+       "2                       0.0         4.411488          1907.0          1907.0   \n",
+       "3                       0.0         4.411488          1907.0          1907.0   \n",
+       "4                       0.0         4.411488          1907.0          1907.0   \n",
+       "...                     ...              ...             ...             ...   \n",
+       "12604                   0.0         4.632218          2208.0          2208.0   \n",
+       "12605                   0.0         4.632218          2208.0          2208.0   \n",
+       "12606                   0.0         4.632218          2208.0          2208.0   \n",
+       "12607                   0.0         4.632218          2208.0          2208.0   \n",
+       "12608                   0.0         4.632218          2208.0          2208.0   \n",
+       "\n",
+       "       area_feature_2  area_feature_0_graph  area_feature_1_graph  \\\n",
+       "0              1907.0                1907.0                1907.0   \n",
+       "1              1907.0                1907.0                1907.0   \n",
+       "2              1907.0                1907.0                1907.0   \n",
+       "3              1907.0                1907.0                1907.0   \n",
+       "4              1907.0                1907.0                1907.0   \n",
+       "...               ...                   ...                   ...   \n",
+       "12604          2208.0                2208.0                2208.0   \n",
+       "12605          2208.0                2208.0                2208.0   \n",
+       "12606          2208.0                2208.0                2208.0   \n",
+       "12607          2208.0                2208.0                2208.0   \n",
+       "12608          2208.0                2208.0                2208.0   \n",
+       "\n",
+       "       area_feature_2_graph  type  \n",
+       "0                    1907.0     0  \n",
+       "1                    1907.0     2  \n",
+       "2                    1907.0     5  \n",
+       "3                    1907.0     5  \n",
+       "4                    1907.0     2  \n",
+       "...                     ...   ...  \n",
+       "12604                2208.0     0  \n",
+       "12605                2208.0     3  \n",
+       "12606                2208.0     5  \n",
+       "12607                2208.0     2  \n",
+       "12608                2208.0     0  \n",
+       "\n",
+       "[12609 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
   },
   {
    "cell_type": "code",
