prepare more cells and add some structure

--- a/notebooks/Presentation_Notebook.ipynb
+++ b/notebooks/Presentation_Notebook.ipynb
@@ -57,9 +57,6 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# Data import\n",
     "file_folder = '../data/champs-scalar-coupling' if 'champs-scalar-coupling' in os.listdir('../data/') else '../data'\n",
     "\n",
@@ -142,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we show how features generated using topological data analysis (TDA) can be used to improve your machine learning models. Nevertheless, we will also use some non-TDA features. Here we give a brief overview of which features were used. Credit goes to this notebook, where the features were presented: https://www.kaggle.com/robertburbidge/distance-features.\n",
+    "In this notebook we show how features generated using topological data analysis (TDA) can be used to improve your machine learning models. Nevertheless, we will also use some non-TDA features. Here we give a brief overview of which features were used. Credit goes to this notebook, where the features were presented: https://www.kaggle.com/robertburbidge/distance-features. The focus here lies on a geometric analysis, hence the name 'distance features'. \n",
     "\n",
     "List of non-TDA features (atom 0 or 1 respectively refers to the atoms in the atom pair that makes up the bond we are considering):\n",
     "\n",
@@ -163,21 +160,26 @@
     "* 'x_1r', 'y_1r', 'z_1r', 'x_0l', 'y_0l', 'z_0l', 'x_0r', 'y_0r', 'z_0r', 'x_1l', 'y_1l', 'z_1l'\n",
     "* 'atom_count', 'atom_0l', 'atom_0r', 'atom_1l', 'atom_1r'\n",
     "\n",
-    "As the creation of these features takes a while, we import them directly from a pickle file. In case you want to recreate the data on your own, you can either have a look at the notebook linked above or use the 'Distance_feature.py' script in this repository."
+    "As the creation of these features takes a while, we import them directly from a CSV file. In case you want to recreate the data on your own, you can either have a look at the notebook linked above or use the 'Distance_feature.py' script in this repository."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import \n",
+    "train_dist = pd.read_csv('/Users/colinkalin/Desktop/train_dist.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TDA"
+    "## TDA\n",
+    "\n",
+    "As mentioned in the introduction, the main goal of this notebook is to show how TDA can be used in a machine learning problem to extract more information from a dataset and to create new features. We will look at two different but similar approaches to this problem: first we treat a molecule as a point cloud then as a graph. "
    ]
   },
   {
@@ -2883,11 +2885,25 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to for giotto's 'VietorisRipsPersistence' method to know that the matrix we are passing has to be interpreted as a distance matrix not as a point cloud, it's important to set the variable 'metric' to 'precomputed’."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And again we add the newly created features to the dataset."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2900,8 +2916,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point we have created some features and would like to test them."
+    "At this point we have created some features and would like to test them. We train an XGBRegressor model and use 5-fold cross-validation. Let's start with the non-TDA features and later compare the resuls if we add TDA features."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "DataFrame.dtypes for data must be int, float or bool.\n                Did not expect the data types in fields type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-ab25b6182c83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalid_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalid_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mdiff_fold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_valid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/xgboost/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, callbacks)\u001b[0m\n\u001b[1;32m    358\u001b[0m                                    missing=self.missing, nthread=self.n_jobs)\n\u001b[1;32m    359\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 360\u001b[0;31m             \u001b[0mtrainDmatrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmissing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmissing\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnthread\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    361\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    362\u001b[0m         \u001b[0mevals_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/xgboost/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, label, missing, weight, silent, feature_names, feature_types, nthread)\u001b[0m\n\u001b[1;32m    378\u001b[0m         data, feature_names, feature_types = _maybe_pandas_data(data,\n\u001b[1;32m    379\u001b[0m                                                                 \u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 380\u001b[0;31m                                                                 feature_types)\n\u001b[0m\u001b[1;32m    381\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    382\u001b[0m         data, feature_names, feature_types = _maybe_dt_data(data,\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/xgboost/core.py\u001b[0m in \u001b[0;36m_maybe_pandas_data\u001b[0;34m(data, feature_names, feature_types)\u001b[0m\n\u001b[1;32m    237\u001b[0m         msg = \"\"\"DataFrame.dtypes for data must be int, float or bool.\n\u001b[1;32m    238\u001b[0m                 Did not expect the data types in fields \"\"\"\n\u001b[0;32m--> 239\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbad_fields\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: DataFrame.dtypes for data must be int, float or bool.\n                Did not expect the data types in fields type"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'num_leaves': 128,\n",
+    "          'min_child_samples': 79,\n",
+    "          'objective': 'reg:squarederror',\n",
+    "          'max_depth': 13,\n",
+    "          'learning_rate': 0.1,\n",
+    "          \"subsample_freq\": 1,\n",
+    "          \"subsample\": 0.9,\n",
+    "          \"bagging_seed\": 11,\n",
+    "          \"metric\": 'mae',\n",
+    "          \"verbosity\": 1,\n",
+    "          'reg_alpha': 0.1,\n",
+    "          'reg_lambda': 0.3,\n",
+    "          'colsample_bytree': 1.0}\n",
+    "\n",
+    "\n",
+    "model = XGBRegressor(**params)\n",
+    "\n",
+    "n_fold = 5\n",
+    "folds = KFold(n_splits=n_fold, shuffle=True, random_state=43)\n",
+    "\n",
+    "results = []\n",
+    "diff = []\n",
+    "\n",
+    "for fold_n, (train_index, valid_index) in enumerate(folds.split(X)):\n",
+    "    \n",
+    "    X_train, X_valid = X.iloc[train_index], X.iloc[valid_index]\n",
+    "    y_train, y_valid = y.iloc[train_index], y.iloc[valid_index]\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_valid)\n",
+    "    diff_fold = y_pred - y_valid\n",
+    "    diff.append(diff_fold)\n",
+    "    print(group_mean_log_mae(y_pred, y_valid, X_valid['type']))\n",
+    "    results.append(group_mean_log_mae(y_pred, y_valid, X_valid['type']))\n",
+    "    \n",
+    "print('After {}-fold CV: Mean: '.format(n_fold), np.mean(results), 'Std.:', np.std(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
