print rounded results, remove unnecessary (commented) lines

--- a/notebooks/Presentation_Notebook.ipynb
+++ b/notebooks/Presentation_Notebook.ipynb
@@ -4178,16 +4178,6 @@
     }
    ],
    "source": [
-    "from IPython.display import display, HTML\n",
-    "\n",
-    "#display(HTML(\"\"\"\n",
-    "#<style>\n",
-    "#.output {\n",
-    "#    align-items: center;\n",
-    "#    }\n",
-    "#</style>\n",
-    "#\"\"\"))\n",
-    "\n",
     "molecule_idx = 72\n",
     "persistence_fig = plot_diagram(pDiag[molecule_idx][0])\n",
     "iplot(persistence_fig)\n",
@@ -4201,15 +4191,6 @@
     "molecule_fig = plot_molecule(molecule_selection[molecule_idx], structures)\n",
     "iplot(molecule_fig)\n",
     "\n",
-    "display(HTML(\"\"\"\n",
-    "<style>\n",
-    ".output {\n",
-    "    align-items: left;\n",
-    "    text-\n",
-    "    }\n",
-    "</style>\n",
-    "\"\"\"))\n",
-    "\n",
     "print('Number of relevant holes:', num_relevant_holes(pDiag[molecule_idx], 1, theta=0.55)[0])"
    ]
   },
@@ -4218,11 +4199,11 @@
    "metadata": {},
    "source": [
     "The idea is now to create a bunch of features from the persistence diagram and then to add these to the corresponding bonds in the dataset. The following features were created for this demo:\n",
-    " * Number of holes (in dimension 0, 1 and 2)\n",
-    " * Number of relevant holes (in dimension 0, 1 and 2)\n",
-    " * Average lifetime (in dimension 0, 1 and 2)\n",
-    " * Amplitude (for an explanation see e.g. here: ....)\n",
-    " * Binned features (in dimension 0, 1 and 2)"
+    " * Number of holes (in dimension 0, 1 and 2): Number of points in the persistence diagram per dimension\n",
+    " * Number of relevant holes (in dimension 0, 1 and 2): Number of points in the persistence diagram that have a lifetime larger than 50% of the maximal lifetime per dimension\n",
+    " * Average lifetime (in dimension 0, 1 and 2): Average lifetime of the points per dimension\n",
+    " * Wasserstein amplitude: one can calculate an amplitude for each persitence diagram. For an explanation see e.g. here: \n",
+    " * Binned features (in dimension 0, 1 and 2): to be added..."
    ]
   },
   {
@@ -6083,29 +6064,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/colinkalin/anaconda3/lib/python3.7/site-packages/xgboost/core.py:587: FutureWarning:\n",
-      "\n",
-      "Series.base is deprecated and will be removed in a future version\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.8227039877117939\n",
-      "-0.8731179430381525\n",
-      "-0.834635523688331\n",
-      "-0.7536559896267269\n",
-      "-0.7535808998791302\n",
-      "After 5-fold CV: Mean:  -0.807538868788827 Std.: 0.047073669059775614\n"
+      "-0.8227\n",
+      "-0.87312\n",
+      "-0.83464\n",
+      "-0.75366\n",
+      "-0.75358\n",
+      "After 5-fold CV: Mean:  -0.80754 Std.: 0.04707\n"
      ]
     }
    ],
@@ -6127,7 +6098,7 @@
     "    results.append(group_mean_log_mae(y_pred, y_valid, X_valid['type']))\n",
     "    \n",
     "print('After {}-fold CV: Mean: '.format(n_fold), np.round(np.mean(results), num_digits), \n",
-    "      'Std.:', np.round(np.std(results), num_digits)"
+    "      'Std.:', np.round(np.std(results), num_digits))"
    ]
   },
   {
@@ -6139,18 +6110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/colinkalin/anaconda3/lib/python3.7/site-packages/xgboost/core.py:587: FutureWarning:\n",
+      "\n",
+      "Series.base is deprecated and will be removed in a future version\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.8326365550701423\n",
-      "-0.9016668736534268\n",
-      "-0.8392116237749786\n",
-      "-0.7779989141206699\n",
-      "-0.7952632224801465\n",
+      "-0.83264\n",
+      "-0.90167\n",
+      "-0.83921\n",
+      "-0.778\n",
+      "-0.79526\n",
       "After 5-fold CV: Mean:  -0.82936 Std.: 0.04275\n"
      ]
     }
@@ -6178,11 +6159,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In each fold, and as a result also in the mean, the model together with TDA consistently outperforms the model without TDA features!"
+   ]
   }
  ],
  "metadata": {
