--- a/notebooks/Presentation_Notebook.ipynb
+++ b/notebooks/Presentation_Notebook.ipynb
@@ -6164,6 +6164,131 @@
    "source": [
     "In each fold, and as a result also in the mean, the model together with TDA consistently outperforms the model without TDA features!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['atom_index_0',\n",
+       " 'atom_index_1',\n",
+       " 'type',\n",
+       " 'type_0',\n",
+       " 'type_1',\n",
+       " 'atom_0',\n",
+       " 'x_0',\n",
+       " 'y_0',\n",
+       " 'z_0',\n",
+       " 'atom_1',\n",
+       " 'x_1',\n",
+       " 'y_1',\n",
+       " 'z_1',\n",
+       " 'dist',\n",
+       " 'dist_x',\n",
+       " 'dist_y',\n",
+       " 'dist_z',\n",
+       " 'dist_to_type_mean',\n",
+       " 'dist_to_type_0_mean',\n",
+       " 'dist_to_type_1_mean',\n",
+       " 'molecule_dist_mean_x',\n",
+       " 'molecule_dist_std_x',\n",
+       " 'molecule_dist_skew_x',\n",
+       " 'molecule_dist_kurt_x',\n",
+       " 'molecule_dist_mean_y',\n",
+       " 'molecule_dist_std_y',\n",
+       " 'molecule_dist_skew_y',\n",
+       " 'molecule_dist_kurt_y',\n",
+       " 'meanx',\n",
+       " 'meany',\n",
+       " 'meanz',\n",
+       " 'dist_0tomean',\n",
+       " 'dist_1tomean',\n",
+       " 'meanxH',\n",
+       " 'meanyH',\n",
+       " 'meanzH',\n",
+       " 'dist_0tomeanH',\n",
+       " 'dist_1tomeanH',\n",
+       " 'meanxC',\n",
+       " 'meanyC',\n",
+       " 'meanzC',\n",
+       " 'dist_0tomeanC',\n",
+       " 'dist_1tomeanC',\n",
+       " 'meanxN',\n",
+       " 'meanyN',\n",
+       " 'meanzN',\n",
+       " 'dist_0tomeanN',\n",
+       " 'dist_1tomeanN',\n",
+       " 'meanxO',\n",
+       " 'meanyO',\n",
+       " 'meanzO',\n",
+       " 'dist_0tomeanO',\n",
+       " 'dist_1tomeanO',\n",
+       " 'meanxF',\n",
+       " 'meanyF',\n",
+       " 'meanzF',\n",
+       " 'dist_0tomeanF',\n",
+       " 'dist_1tomeanF',\n",
+       " 'atom_count',\n",
+       " 'atom_0l',\n",
+       " 'x_0l',\n",
+       " 'y_0l',\n",
+       " 'z_0l',\n",
+       " 'atom_0r',\n",
+       " 'x_0r',\n",
+       " 'y_0r',\n",
+       " 'z_0r',\n",
+       " 'dist_0l',\n",
+       " 'dist_0r',\n",
+       " 'atom_1l',\n",
+       " 'x_1l',\n",
+       " 'y_1l',\n",
+       " 'z_1l',\n",
+       " 'atom_1r',\n",
+       " 'x_1r',\n",
+       " 'y_1r',\n",
+       " 'z_1r',\n",
+       " 'dist_1l',\n",
+       " 'dist_1r',\n",
+       " 'num_rel_holes_0',\n",
+       " 'num_rel_holes_1',\n",
+       " 'num_rel_holes_2',\n",
+       " 'num_holes_0',\n",
+       " 'num_holes_1',\n",
+       " 'num_holes_2',\n",
+       " 'avg_lifetime_0',\n",
+       " 'avg_lifetime_1',\n",
+       " 'avg_lifetime_2',\n",
+       " 'amplitude',\n",
+       " 'num_rel_holes_0_graph',\n",
+       " 'num_rel_holes_1_graph',\n",
+       " 'num_rel_holes_2_graph',\n",
+       " 'num_holes_0_graph',\n",
+       " 'num_holes_1_graph',\n",
+       " 'num_holes_2_graph',\n",
+       " 'avg_lifetime_0_graph',\n",
+       " 'avg_lifetime_1_graph',\n",
+       " 'avg_lifetime_2_graph',\n",
+       " 'amplitude_graph']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
